fixed centering issue on mobile

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a:hover {
 }
 
 .assetGroup {
-  text-align: left;
+  text-align: center;
   padding: 0 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
